data parse fix
